<resources>
    <string name="app_name">Baking Recipes</string>
    <string name="string_button_prev">PREVIOUS</string>
    <string name="string_button_next">NEXT</string>
    <string name="dialog_message">Are you sure you want to clear all items?</string>
    <string name="dialog_neg_action">Cancel</string>
    <string name="dialog_pos_action">Delete</string>
    <string name="appwidget_text">Baking Recipes</string>
    <string name="add_widget">Add widget</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="remove_all_list">Remove from shopping list</string>
    <string name="add_all_to_list">Add all to Shopping list</string>
    <string name="recipe_appwidget_text">Ingredients</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="server_info">Couldn\'t load data from Server</string>
    <string name="add_to_list">ADDED TO SHOPPING LIST</string>
    <string name="remove_from_list">REMOVED FROM SHOPPING LIST</string>
    <string name="view_list_action">VIEW LIST</string>
    <string name="toolbar_detail_title">Recipe Details</string>
    <string name="toolbar_ingredients_title">Ingredients</string>
    <string name="toolbar_shopping_list_title">Shopping List</string>
    <string name="keep_track_of_your_ingredients">Keep track of your ingredients</string>
    <string name="recipe_steps">RECIPE STEPS</string>
    <!--TODO: set content description-->
    <string name="content_description">contentDescription</string>
    <string name="no_connection_error">No Connection</string>
    <string name="retry_button_text">Retry</string>
    <string name="clear_all_button_text">Clear All</string>
    <string name="menu_shopping_list_text">Shopping List</string>
    <string name="lable_ingredients">Ingredients</string>
    <string name="lable_directions">Directions</string>

</resources>
