...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_shopping_list_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_size_small"
        android:layout_marginEnd="@dimen/margin_size_normal"
        android:layout_marginStart="@dimen/margin_size_normal"
        android:layout_marginTop="@dimen/margin_size_small"
...
